# Graphics

./: .gitmodules  .project  HOWTO.txt  test.txt
Education/JavaOpenCVApplication/: .classpath  .project
Education/JavaOpenCVBindingsTest/: .classpath  .classpath~  .gitignore  .project  build.xml
Education/Programming the Physical World/: .project
Education/Programming the Physical World/OpenSCADModels/: CompositesExamples.scad  EyeballExample.scad  ShapesAndMovingExample.scad  example_1.scad
Education/Programming the Physical World/PanTiltMechanism/: Assembly.scad  CameraMount.scad  PanRingHolder.scad  ServoPanTIltCamera.scad  TiltRingHolder.scad
FreeCadModels/: BottomFlang.fcstd  NR board  Servo With Horns-Screws.fcstd  Top Flange  Top Flange.fcstd  assembly.FCStd  circle fan.fcstd  cutout.fcstd  cutoutmodified.fcstd  omarstest.txt  senor bracket.FCStd  servo top bracket without horns.FCStd  servotopbracketwithouthornscutout.stl  showing.txt  test.FCStd  test.txt  testfile.txt  testupload.FCStd  top servo bracket w horns.FCStd  top servo bracket w horns.FCStd1  top servo bracket w horns.stl  topflange.fcstd
FreeCadModels/Assembly/FCSTD/: Assembly.FCStd
FreeCadModels/Assembly/STL/: Assembly.stl
FreeCadModels/BottomFlange/FCSTD/: bottomflange.FCStd
FreeCadModels/BottomFlange/STL/: BottomFlange.stl
FreeCadModels/CircleFan/STL/: CircleFan.stl
FreeCadModels/MiniServo/: miniservo.FCStd
FreeCadModels/bigslot/: bigslot.stl
FreeCadModels/boxlinks/: boxscoop.FCStd  linkageassembly.FCStd  sidelinkage.FCStd  toplinkage.FCStd
FreeCadModels/sarruslinkage/: assemblycomplete.FCStd  assemblycomplete.FCStd1  base.FCStd  base.FCStd1  bottomlinkage.FCStd  connectingbar.FCStd  connectingbar.FCStd1  cutout-servo.stl  gripper.FCStd  gripper.stl  link.FCStd  link.FCStd1  linkageassembly.FCStd  linkageassembly.FCStd1  sidelinkage.FCStd  sidelinkage.FCStd1  toplinkage.FCStd  toplinkage.FCStd1
FreeCadModels/vendingframe/: vendingframe.FCStd
FreeCadModels/vendinmachineparts/: holderside.FCStd  holderside.FCStd1  innerdoor.FCStd  innerdoor.FCStd1  sidedoor.FCStd  sidedoor.FCStd1
Graphics/: logo_fulldesign_filled.ai  logo_fulldesign_outline.ai  logo_fulldesign_outline.dxf
Graphics/HanddrawnLogo/: logo_fulldesign_color.ai  logo_fulldesign_outline.dxf  logo_fulldesign_stencil.ai
Graphics/Signage/: readme.md
Graphics/SimplifiedLogo/: keychainGenerator.groovy  simplified logo-color-faviconsource.ai  simplified logo-color-flat.ai  simplified logo.ai
Graphics/Web/: meetupHeader.psd  wiki logo
HandE/: insertModule.sh  test.txt  upload.sh
HandE/3DPrint/: Workbench.cpp  install.sh  install.sh~  resource.qrc
HandE/NR_TEST/: CMakeLists.txt~  Init.py  InitGui.py.save  Paths.py  iwantvend.py
HandE/NR_TEST/Gui/: AppNR_TESTGui.cpp  AppNR_TESTGuiPy.cpp  CMakeLists.txt  Makefile  Workbench.h  cmake_install.cmake
HandE/NeuronRobotics/: Makefile.am
HandE/NeuronRobotics/App/: AppNeuronRobotics.cpp  CMakeLists.txt  Makefile.am
HandE/NeuronRobotics/Gui/: CMakeLists.txt  PreCompiled.h  Workbench.h
HandE/NeuronRobotics/Gui/Resources/: NeuronRobotics.qrc
HandE/SubModules/NR_TEST/: CMakeLists.txt  Ico.xpm  Makefile.am
HandE/SubModules/NR_TEST/App/: AppNR_TESTPy.cpp  PreCompiled.h
HandE/SubModules/NR_TEST/Gui/: Makefile.am  qrc_NR_TEST.cxx
HandE/SubModules/Vend/App/: Makefile.am
HandE/SubModules/Vend/Gui/: AppVendGuiPy.cpp  Command.cpp  Makefile.am
HandE/Vend/: Init.py  InitGui.py
HandE/Vend/App/: AppVendPy.cpp  CMakeLists.txt
HandE/Vend/Gui/: AppVendGui.cpp  CMakeLists.txt  PreCompiled.h  TaskPanel.py  Workbench.h
applications/FreeCadFork/: download.sh
applications/FreeCadFork/SubModules/NR_GUI/Gui/: AppNR_GUIGui.cpp  Makefile.am  Workbench.h
applications/FreeCadFork/SubModules/NR_TEST/App/: AppNR_TEST.cpp  CMakeLists.txt  Makefile.am
applications/FreeCadFork/SubModules/NeuronRobotics/Gui/: AppNeuronRoboticsGui.cpp  AppNeuronRoboticsGuiPy.cpp  Command.cpp  Makefile.am  Workbench.cpp
applications/FreeCadFork/free-cad/src/Mod/NR_GUI/: CMakeLists.txt
applications/FreeCadFork/free-cad/src/Mod/NR_GUI/App/: AppNR_GUI.cpp  AppNR_GUIPy.cpp  Makefile.am
applications/FreeCadFork/free-cad/src/Mod/NR_GUI/Gui/: CMakeLists.txt  PreCompiled.h
applications/TechnocopiaKitFileGenerator/: .project
hardware/: PrintrBotPlus_Cura.ini  bottomflange.stl
hardware/FaceLiveCastStand/: .project  FaceStand.dxf
hardware/FanDuctForLaser/: .project  DuctedFanToPnumaticsAdapter.scad
hardware/FreeCadModels/: .project
hardware/Halloween2013-walker/: .project  Cut-sheet.dxf  Full-Sheet.dxf  StiltPieces.dxf  armExtentios.scad  armStiltFC.fcstd  armStiltFC.fcstd1  armStilt_.dxf  halfInchCuts.dxf  woodParts.dxf
hardware/OpenScadModels/: .project  ReplacmnetBracket.scad  gripleg.scad  paperdirector.scad  spoolholder-sides.scad  sprocket_with_tolerance (1).stl  sprocket_with_tolerance (2).scad  sprocket_with_tolerance (3).scad
hardware/PullyCapston/: Pulley.stl  PulleyCapstonPart.fcstd  PulleyCapstonPart.fcstd1  Pully.stl  new_pully.FCStd  new_pully.FCStd1  new_pully_2.FCStd  new_pully_2.FCStd1  new_pully_2_backup.FCStd  newpully_fixed.stl
hardware/ServoBracketCableDriven/: bracket.FCStd  bracket.FCStd1  bracket_new.stl
hardware/ServoStock/: .gitignore  .project  AdamRod.scad  BearingCap.scad  BearingCaptest.stl  Belt.scad  Carriage.scad  Clips.scad  Extruder.scad  Extruder.stl  ExtruderIdlerWheel.scad  ExtruderMKII.scad  ExtruderPrintBed.scad  Extruder_Encoder_Keepaway.scad  Extruder_Encoder_Keepaway.stl  IdlerBearingClip.scad  IdlerBearingClip.stl  IdlerBearingPlug.scad  MKIIwheel.scad  Makefile  Parameters.scad  Pulley.scad  Pulley.stl  Pulley_fixed (2).stl  Pulley_fixed.stl  README.txt  Rod.scad  Rod.stl  RodEndClips.scad  SingleAxisPrintBed.scad  Slider.scad  Slider.stl  StructuralBearingMount.scad  StructuralBearingMount.stl  StructuralBearingMount2.scad  StructuralFeet.scad  StructuralFeet.stl  cliptest.stl  encodermounttest.stl
hardware/StandardServo/: servomotor_1.stl
hardware/StepperReplacementServoModule/: .project  Makefile
hardware/Vitamins/: .project
(+557 files in other folders)
